# rust-todomvc

./: .gitignore  README.md  rustfmt.toml
backend/: Cargo.toml
backend/sql/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
backend/src/: main.rs
backend/src/_tests/: model_db.rs  model_todo.rs  web_todo.rs
backend/src/model/: db.rs  mod.rs  todo.rs
backend/src/security/: mod.rs
backend/src/web/: filter_auth.rs  filter_utils.rs  mod.rs  todo.rs
frontend/: package-lock.json  package.json  rollup.config.js  tsconfig.json
frontend/src/: main.ts  webc.ts
frontend/src/model/: todo-mco.ts
frontend/src/ui/: commons.ts  todo-mvc.ts
frontend/web-folder/: index.html
frontend/web-folder/css/: main.css
